--- a/css/home.css
+++ b/css/home.css
@@ -28,22 +28,90 @@
 }
 
 #hobbies-page .paragraph{
-    border: red 1px solid;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
     font-size: 1em;
     color: #333;
+}
+
+#hobbies-page .paragraph p{
     max-width: 60ch;
 }
 
 #hobbies-page ul{
-    list-style: none;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-content: space-between;
     gap: 1rem;
-    margin-bottom: 5rem;
 }
-#hobbies-page ul li img{
+
+@media (max-width: 1024px) {
+    #hobbies-page ul {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 768px) {
+    #hobbies-page ul {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.75rem;
+    }
+}
+
+@media (max-width: 480px) {
+    #hobbies-page ul {
+        grid-template-columns: 1fr;
+        gap: 0.5rem; 
+    }
+}
+
+#hobbies-page ul li {
+    width: 100%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#hobbies-page ul li img {
+    aspect-ratio: 1 / 1;
     width: 100%;
     height: 100%;
+    object-fit: cover;
     border-radius: 10px;
+    margin-left: -2rem
+}
+
+#hobbies-page ul li a{
+    text-align: center;
+    text-decoration: none;
+    font-size: 1em;
+    color: #333;
+}
+
+#hobbies-page .footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 1rem;
+}
+
+#hobbies-page .footer a{
+    padding: .5rem 1rem;
+    border-radius: 8px;
+    background-color: #618cad;
+    color: rgb(224, 239, 241);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#hobbies-page .footer a:hover{
+    color: white;
+    background-color: #80a7c4;
+    scale: 1.1;
+    text-shadow: 1px 1px #ccc;
+    transition: all .3s;
 }
